--- a/package.json
+++ b/package.json
@@ -61,7 +61,9 @@
     ],
     "moduleNameMapper": {
       "^\\$lib(.*)$": "<rootDir>/src/lib$1",
-      "^\\$app(.*)$": "<rootDir>/.svelte-kit/dev/runtime/app$1"
+      "^\\$app(.*)$": [
+        "<rootDir>/.svelte-kit/dev/runtime/app$1",
+        "<rootDir>/.svelte-kit/build/runtime/app$1"]
     }
   }
 }
