:construction: test on netlify functions

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,3 +1,6 @@
 [build]
-  command = "npm run test; npm run build"
+  functions = "functions"
+  # This will be run the site build
+  command = "npm run build"
+  # This is the directory is publishing to netlify's CDN
   publish = "build"
