:construction: test on netlify functions

--- a/netlify.toml
+++ b/netlify.toml
@@ -4,3 +4,6 @@
   command = "npm run build"
   # This is the directory is publishing to netlify's CDN
   publish = "build"
+
+  # Don't do this at home kids
+  FOO_SECRET = "localhost value"
