:bug: try fixing CI github

--- a/package.json
+++ b/package.json
@@ -64,7 +64,8 @@
       "^\\$lib(.*)$": "<rootDir>/src/lib$1",
       "^\\$app(.*)$": [
         "<rootDir>/.svelte-kit/dev/runtime/app$1",
-        "<rootDir>/.svelte-kit/build/runtime/app$1"
+        "<rootDir>/.svelte-kit/build/runtime/app$1",
+        "<rootDir>/.svelte-kit/runtime/app$1"
       ]
     }
   }
