--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
   "type": "module",
   "dependencies": {
     "faunadb": "^4.4.2",
-    "html2canvas": "^1.3.3"
+    "html2canvas": "^1.3.3",
+    "toml": "^3.0.0"
   }
 }
