--- a/package.json
+++ b/package.json
@@ -2,13 +2,12 @@
   "name": "timeline-charts",
   "version": "0.0.1",
   "scripts": {
-    "dev": "svelte-kit dev",
-    "build": "svelte-kit build",
+    "dev": "vite dev",
+    "build": "vite build",
     "test": "jest",
     "test:watch": "jest --watch",
     "coverage": "jest --coverage=true",
-    "package": "svelte-kit package",
-    "preview": "svelte-kit preview",
+    "preview": "vite preview",
     "check": "svelte-check --tsconfig ./tsconfig.json",
     "check:watch": "svelte-check --tsconfig ./tsconfig.json --watch",
     "lint": "prettier --ignore-path .gitignore --check --plugin-search-dir=. . && eslint --ignore-path .gitignore .",
@@ -16,9 +15,9 @@
   },
   "devDependencies": {
     "@babel/preset-env": "^7.16.11",
-    "@sveltejs/adapter-auto": "next",
-    "@sveltejs/adapter-netlify": "^1.0.0-next.37",
-    "@sveltejs/kit": "next",
+    "@sveltejs/adapter-auto": "^2.0.0",
+    "@sveltejs/adapter-netlify": "^2.0.0-next.37",
+    "@sveltejs/kit": "^1.5.0",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/svelte": "^3.0.3",
     "@types/jest": "^27.4.0",
@@ -32,12 +31,13 @@
     "prettier": "^2.4.1",
     "prettier-plugin-svelte": "^2.4.0",
     "svelte": "^3.44.0",
-    "svelte-check": "^2.2.6",
+    "svelte-check": "^3.2.0",
     "svelte-jester": "^2.1.5",
-    "svelte-preprocess": "^4.9.4",
+    "svelte-preprocess": "^5.0.3",
     "ts-jest": "^27.1.3",
-    "tslib": "^2.3.1",
-    "typescript": "^4.4.3"
+    "tslib": "^2.4.1",
+    "typescript": "^4.4.3",
+		"vitest": "^0.29.8"
   },
   "type": "module",
   "dependencies": {
