--- a/package.json
+++ b/package.json
@@ -4,40 +4,26 @@
   "scripts": {
     "dev": "vite dev",
     "build": "vite build",
-    "test": "jest",
-    "test:watch": "jest --watch",
-    "coverage": "jest --coverage=true",
     "preview": "vite preview",
-    "check": "svelte-check --tsconfig ./tsconfig.json",
-    "check:watch": "svelte-check --tsconfig ./tsconfig.json --watch",
-    "lint": "prettier --ignore-path .gitignore --check --plugin-search-dir=. . && eslint --ignore-path .gitignore .",
-    "format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. ."
+    "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
+    "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
+    "test": "vitest run src",
+    "test:watch": "vitest src",
+    "coverage": "vitest run --coverage"
   },
   "devDependencies": {
-    "@babel/preset-env": "^7.16.11",
     "@sveltejs/adapter-auto": "^2.0.0",
     "@sveltejs/adapter-netlify": "^2.0.0-next.37",
     "@sveltejs/kit": "^1.5.0",
-    "@testing-library/jest-dom": "^5.16.1",
-    "@testing-library/svelte": "^3.0.3",
-    "@types/jest": "^27.4.0",
-    "@typescript-eslint/eslint-plugin": "^4.31.1",
-    "@typescript-eslint/parser": "^4.31.1",
-    "babel-jest": "^27.4.6",
-    "eslint": "^7.32.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-svelte3": "^3.2.1",
-    "jest": "^27.4.7",
-    "prettier": "^2.4.1",
-    "prettier-plugin-svelte": "^2.4.0",
-    "svelte": "^3.44.0",
+    "@testing-library/svelte": "^3.2.2",
+    "@vitest/coverage-c8": "^0.30.1",
+    "jsdom": "^21.1.1",
+    "svelte": "^3.54.0",
     "svelte-check": "^3.2.0",
-    "svelte-jester": "^2.1.5",
-    "svelte-preprocess": "^5.0.3",
-    "ts-jest": "^27.1.3",
     "tslib": "^2.4.1",
-    "typescript": "^4.4.3",
-		"vitest": "^0.29.8"
+    "typescript": "^5.0.0",
+    "vite": "^4.2.1",
+    "vitest": "^0.30.1"
   },
   "type": "module",
   "dependencies": {
