--- a/package.json
+++ b/package.json
@@ -12,22 +12,22 @@
     "coverage": "vitest run --coverage"
   },
   "devDependencies": {
-    "@sveltejs/adapter-auto": "^2.0.0",
-    "@sveltejs/adapter-netlify": "^2.0.0-next.37",
-    "@sveltejs/kit": "^1.5.0",
+    "@sveltejs/adapter-auto": "^2.1.0",
+    "@sveltejs/adapter-netlify": "^2.0.8",
+    "@sveltejs/kit": "^1.24.1",
     "@testing-library/svelte": "^3.2.2",
-    "@vitest/coverage-c8": "^0.30.1",
-    "jsdom": "^21.1.1",
-    "svelte": "^3.54.0",
-    "svelte-check": "^3.2.0",
-    "tslib": "^2.4.1",
-    "typescript": "^5.0.0",
-    "vite": "^4.2.1",
-    "vitest": "^0.30.1"
+    "@vitest/coverage-v8": "^0.34.3",
+    "jsdom": "^21.1.2",
+    "svelte": "^3.59.2",
+    "svelte-check": "^3.5.1",
+    "tslib": "^2.6.2",
+    "typescript": "^5.2.2",
+    "vite": "^4.4.9",
+    "vitest": "^0.34.3"
   },
   "type": "module",
   "dependencies": {
-    "faunadb": "^4.4.2",
+    "faunadb": "^4.8.0",
     "html2canvas": "^1.3.3",
     "toml": "^3.0.0"
   }
