--- a/netlify.toml
+++ b/netlify.toml
@@ -8,3 +8,8 @@
 [dev]
   # Force a static port to serve Netlify's Lambda Functions
 	functionsPort = 3001
+  [[headers]]
+    # Define which paths this specific [[headers]] block will cover.
+    for = "/*"
+      [headers.values]
+      Access-Control-Allow-Origin = "*"
