--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@sveltejs/kit": "^2.0.0",
     "@sveltejs/vite-plugin-svelte": "^5.0.0",
     "@testing-library/svelte": "^5.0.0",
+    "@types/better-sqlite3": "^7.6.13",
     "@vitest/coverage-v8": "^3.0.0",
     "jsdom": "^26.1.0",
     "svelte": "^5.0.0",
@@ -28,7 +29,7 @@
   },
   "type": "module",
   "dependencies": {
-    "faunadb": "^4.8.0",
+    "better-sqlite3": "^11.9.1",
     "html2canvas": "^1.4.1",
     "toml": "^3.0.0"
   }
