--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
     "test": "vitest run src",
     "test:watch": "vitest src",
-    "coverage": "vitest run --coverage"
+    "coverage": "vitest run --coverage",
+    "machine-translate": "inlang machine translate --project project.inlang"
   },
   "devDependencies": {
+    "@inlang/cli": "^3.0.11",
+    "@inlang/paraglide-js": "2.0.12",
     "@sveltejs/adapter-node": "^5.2.12",
     "@sveltejs/kit": "^2.0.0",
     "@sveltejs/vite-plugin-svelte": "^5.0.0",
