--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@sveltejs/adapter-node": "^5.2.12",
     "@sveltejs/kit": "^2.0.0",
     "@sveltejs/vite-plugin-svelte": "^5.0.0",
+    "@tailwindcss/forms": "^0.5.10",
+    "@tailwindcss/typography": "^0.5.16",
     "@testing-library/svelte": "^5.0.0",
     "@types/better-sqlite3": "^7.6.13",
     "@vitest/coverage-v8": "^3.0.0",
@@ -31,8 +33,10 @@
   },
   "type": "module",
   "dependencies": {
+    "@tailwindcss/vite": "^4.1.5",
     "better-sqlite3": "^11.9.1",
-    "html2canvas": "^1.4.1",
+    "html2canvas-pro": "^1.5.10",
+    "tailwindcss": "^4.1.5",
     "toml": "^3.0.0"
   }
 }
