--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "timeline-charts",
-  "version": "0.2.3",
+  "version": "0.3.0",
   "scripts": {
     "dev": "vite dev",
     "build": "vite build",
@@ -13,30 +13,30 @@
     "machine-translate": "inlang machine translate --project project.inlang"
   },
   "devDependencies": {
-    "@inlang/cli": "^3.0.11",
-    "@inlang/paraglide-js": "2.0.12",
-    "@sveltejs/adapter-node": "^5.2.12",
-    "@sveltejs/kit": "^2.0.0",
+    "@inlang/cli": "^3.0.0",
+    "@inlang/paraglide-js": "^2.0.0",
+    "@sveltejs/adapter-node": "^5.2.0",
+    "@sveltejs/kit": "^2.21.0",
     "@sveltejs/vite-plugin-svelte": "^5.0.0",
-    "@tailwindcss/forms": "^0.5.10",
-    "@tailwindcss/typography": "^0.5.16",
-    "@testing-library/svelte": "^5.0.0",
-    "@types/better-sqlite3": "^7.6.13",
-    "@vitest/coverage-v8": "^3.0.0",
+    "@tailwindcss/forms": "^0.5.0",
+    "@tailwindcss/typography": "^0.5.0",
+    "@testing-library/svelte": "^5.2.0",
+    "@types/better-sqlite3": "^7.6.0",
+    "@vitest/coverage-v8": "^3.1.0",
     "jsdom": "^26.1.0",
-    "svelte": "^5.0.0",
-    "svelte-check": "^4.0.0",
-    "tslib": "^2.8.1",
-    "typescript": "^5.8.3",
-    "vite": "^6.0.0",
-    "vitest": "^3.0.0"
+    "svelte": "^5.33.0",
+    "svelte-check": "^4.2.0",
+    "tslib": "^2.8.0",
+    "typescript": "^5.8.0",
+    "vite": "^6.3.0",
+    "vitest": "^3.1.0"
   },
   "type": "module",
   "dependencies": {
-    "@tailwindcss/vite": "^4.1.5",
-    "better-sqlite3": "^11.9.1",
-    "html2canvas-pro": "^1.5.10",
-    "tailwindcss": "^4.1.5",
+    "@tailwindcss/vite": "^4.1.0",
+    "better-sqlite3": "^11.10.0",
+    "html2canvas-pro": "^1.5.0",
+    "tailwindcss": "^4.1.0",
     "toml": "^3.0.0"
   }
 }
