--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
     "test": "vitest run src",
     "test:watch": "vitest src",
     "coverage": "vitest run --coverage",
-    "machine-translate": "inlang machine translate --project project.inlang"
+    "machine-translate": "inlang machine translate --project project.inlang",
+    "lint": "eslint ."
   },
   "devDependencies": {
+    "@eslint/compat": "^1.2.5",
+    "@eslint/js": "^9.18.0",
     "@inlang/cli": "^3.0.0",
     "@inlang/paraglide-js": "^2.0.0",
     "@sveltejs/adapter-node": "^5.2.0",
@@ -23,11 +26,15 @@
     "@testing-library/svelte": "^5.2.0",
     "@types/better-sqlite3": "^7.6.0",
     "@vitest/coverage-v8": "^3.1.0",
+    "eslint": "^9.18.0",
+    "eslint-plugin-svelte": "^3.0.0",
+    "globals": "^16.0.0",
     "jsdom": "^26.1.0",
     "svelte": "^5.33.0",
     "svelte-check": "^4.2.0",
     "tslib": "^2.8.0",
     "typescript": "^5.8.0",
+    "typescript-eslint": "^8.20.0",
     "vite": "^6.3.0",
     "vitest": "^3.1.0"
   },
