--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,6 @@
-VITE_API_ENDPOINT_BASE_URL= https://timeline-chart.dev/
+# Find out more about Timechart's environment variables here: https://github.com/besstiolle/Timeline/?tab=readme-ov-file#
+PUBLIC_ANALYTICS_UMAMI_CODE=aaaaaaaa-aaaa-aaaa-aaaa-aaaaaaaaaaaa
+PUBLIC_ANALYTICS_UMAMI_SCRIPT=https://cloud.umami.is/script.js
+PUBLIC_ANALYTICS_PLAUSIBLE_CODE=timechart.dev
+PUBLIC_ANALYTICS_PLAUSIBLE_SCRIPT=https://plausible.io/js/script.js
+PUBLIC_SHOW_VERSION=TRUE
