update README & link to 'environmental variable' documentation

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-# Find out more about Timechart's environment variables here: https://github.com/besstiolle/Timeline/?tab=readme-ov-file#
+# Find out more about Timechart's environment variables here: https://github.com/besstiolle/Timeline/?tab=readme-ov-file#explanations-of-environmental-variables
 PUBLIC_ANALYTICS_UMAMI_CODE=aaaaaaaa-aaaa-aaaa-aaaa-aaaaaaaaaaaa
 PUBLIC_ANALYTICS_UMAMI_SCRIPT=https://cloud.umami.is/script.js
 PUBLIC_ANALYTICS_PLAUSIBLE_CODE=timechart.dev
