--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-# Find out more about Timechart's environment variables here: https://github.com/besstiolle/Timeline/?tab=readme-ov-file#
+# Find out more about Timechart's environment variables here: https://github.com/besstiolle/Timeline/?tab=readme-ov-file#explanations-of-environmental-variables
 PUBLIC_ANALYTICS_UMAMI_CODE=a8a625b4-997c-442e-91fb-25f23a2b0a92
 PUBLIC_ANALYTICS_UMAMI_SCRIPT=https://cloud.umami.is/script.js
 PUBLIC_ANALYTICS_PLAUSIBLE_CODE=
