--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -7,7 +7,7 @@ services:
     restart: unless-stopped
     volumes:
       - ${DB_LOCATION}:/app/db
-    # Find out more about Timechart's environment variables here: https://github.com/besstiolle/Timeline/?tab=readme-ov-file#
+    # Find out more about Timechart's environment variables here: https://github.com/besstiolle/Timeline/?tab=readme-ov-file#explanations-of-environmental-variables
     environment:
       #- ANALYTICS_UMAMI_CODE=${TIMECHART_ANALYTICS_UMAMI_CODE}
       #- ANALYTICS_UMAMI_SCRIPT=${TIMECHART_ANALYTICS_UMAMI_SCRIPT|https://cloud.umami.is/script.js}
