--- a/docker/example.env
+++ b/docker/example.env
@@ -1,4 +1,4 @@
-# You can find documentation for all the supported env variables at https://github.com/besstiolle/Timeline/?tab=readme-ov-file#
+# You can find documentation for all the supported env variables at https://github.com/besstiolle/Timeline/?tab=readme-ov-file#explanations-of-environmental-variables
 
 # The location where your database is stored
 DB_LOCATION=/your/own/directory/to/db
