fix static env for dynamique env

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 # Find out more about Timechart's environment variables here: https://github.com/besstiolle/Timeline/?tab=readme-ov-file#explanations-of-environmental-variables
-PUBLIC_ANALYTICS_UMAMI_CODE=aaaaaaaa-aaaa-aaaa-aaaa-aaaaaaaaaaaa
-PUBLIC_ANALYTICS_UMAMI_SCRIPT=https://cloud.umami.is/script.js
-PUBLIC_ANALYTICS_PLAUSIBLE_CODE=
-PUBLIC_ANALYTICS_PLAUSIBLE_SCRIPT=https://plausible.io/js/script.js
-PUBLIC_SHOW_VERSION=TRUe
+ANALYTICS_UMAMI_CODE=
+ANALYTICS_UMAMI_SCRIPT=https://cloud.umami.is/script.js
+ANALYTICS_PLAUSIBLE_CODE=
+ANALYTICS_PLAUSIBLE_SCRIPT=https://plausible.io/js/script.js
+SHOW_VERSION=TRUE
