--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -7,10 +7,16 @@ services:
     restart: unless-stopped
     volumes:
       - ${DB_LOCATION}:/app/db
-    # Find out more about Timechart's environment variables here: https://github.com/besstiolle/Timeline/?tab=readme-ov-file#explanations-of-environmental-variables
+    # Find out more about Timechart's environment variables here: https://github.com/besstiolle/Timeline/?tab=readm>
     environment:
-      #- ANALYTICS_UMAMI_CODE=${TIMECHART_ANALYTICS_UMAMI_CODE}
-      #- ANALYTICS_UMAMI_SCRIPT=${TIMECHART_ANALYTICS_UMAMI_SCRIPT|https://cloud.umami.is/script.js}
-      #- ANALYTICS_PLAUSIBLE_CODE=${TIMECHART_ANALYTICS_PLAUSIBLE_CODE}
-      #- ANALYTICS_PLAUSIBLE_SCRIPT=${TIMECHART_ANALYTICS_PLAUSIBLE_SCRIPT|https://plausible.io/js/script.js}
-      - SHOW_VERSION=${TIMECHART_SHOW_VERSION|TRUE}
+      #ANALYTICS_UMAMI_CODE: ${TIMECHART_ANALYTICS_UMAMI_CODE}
+      #ANALYTICS_UMAMI_SCRIPT: ${TIMECHART_ANALYTICS_UMAMI_SCRIPT}
+      #ANALYTICS_PLAUSIBLE_CODE: ${TIMECHART_ANALYTICS_PLAUSIBLE_CODE}
+      #ANALYTICS_PLAUSIBLE_SCRIPT: ${TIMECHART_ANALYTICS_PLAUSIBLE_SCRIPT}
+      SHOW_VERSION: ${TIMECHART_SHOW_VERSION}
+    env_file:
+      - .env
+
+
+
+
