--- a/package.json
+++ b/package.json
@@ -1,49 +1,53 @@
 {
-  "name": "timechart",
-  "version": "0.4.0",
-  "scripts": {
-    "dev": "vite dev",
-    "build": "vite build",
-    "preview": "vite preview",
-    "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
-    "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
-    "test": "vitest run src",
-    "test:watch": "vitest src",
-    "coverage": "vitest run --coverage",
-    "machine-translate": "inlang machine translate --project project.inlang",
-    "lint": "eslint ."
-  },
-  "devDependencies": {
-    "@eslint/compat": "^1.2.5",
-    "@eslint/js": "^9.18.0",
-    "@inlang/cli": "^3.0.0",
-    "@inlang/paraglide-js": "^2.0.0",
-    "@sveltejs/adapter-node": "^5.2.0",
-    "@sveltejs/kit": "^2.21.0",
-    "@sveltejs/vite-plugin-svelte": "^5.0.0",
-    "@tailwindcss/forms": "^0.5.0",
-    "@tailwindcss/typography": "^0.5.0",
-    "@testing-library/svelte": "^5.2.0",
-    "@types/better-sqlite3": "^7.6.0",
-    "@vitest/coverage-v8": "^3.1.0",
-    "eslint": "^9.18.0",
-    "eslint-plugin-svelte": "^3.0.0",
-    "globals": "^16.0.0",
-    "jsdom": "^26.1.0",
-    "svelte": "^5.33.0",
-    "svelte-check": "^4.2.0",
-    "tslib": "^2.8.0",
-    "typescript": "^5.8.0",
-    "typescript-eslint": "^8.20.0",
-    "vite": "^6.3.0",
-    "vitest": "^3.1.0"
-  },
-  "type": "module",
-  "dependencies": {
-    "@tailwindcss/vite": "^4.1.0",
-    "better-sqlite3": "^11.10.0",
-    "html2canvas-pro": "^1.5.0",
-    "tailwindcss": "^4.1.0",
-    "toml": "^3.0.0"
-  }
+	"name": "timechart",
+	"version": "0.4.0",
+	"scripts": {
+		"dev": "vite dev",
+		"build": "vite build",
+		"preview": "vite preview",
+		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
+		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
+		"test": "vitest run src",
+		"test:watch": "vitest src",
+		"coverage": "vitest run --coverage",
+		"machine-translate": "inlang machine translate --project project.inlang",
+		"lint": "eslint . && prettier --check .",
+		"format": "prettier --write ."
+	},
+	"devDependencies": {
+		"@eslint/compat": "^1.2.5",
+		"@eslint/js": "^9.18.0",
+		"@inlang/cli": "^3.0.0",
+		"@inlang/paraglide-js": "^2.0.0",
+		"@sveltejs/adapter-node": "^5.2.0",
+		"@sveltejs/kit": "^2.21.0",
+		"@sveltejs/vite-plugin-svelte": "^5.0.0",
+		"@tailwindcss/forms": "^0.5.0",
+		"@tailwindcss/typography": "^0.5.0",
+		"@testing-library/svelte": "^5.2.0",
+		"@types/better-sqlite3": "^7.6.0",
+		"@vitest/coverage-v8": "^3.1.0",
+		"eslint": "^9.18.0",
+		"eslint-config-prettier": "^10.0.1",
+		"eslint-plugin-svelte": "^3.0.0",
+		"globals": "^16.0.0",
+		"jsdom": "^26.1.0",
+		"prettier": "^3.4.2",
+		"prettier-plugin-svelte": "^3.3.3",
+		"svelte": "^5.33.0",
+		"svelte-check": "^4.2.0",
+		"tslib": "^2.8.0",
+		"typescript": "^5.8.0",
+		"typescript-eslint": "^8.20.0",
+		"vite": "^6.3.0",
+		"vitest": "^3.1.0"
+	},
+	"type": "module",
+	"dependencies": {
+		"@tailwindcss/vite": "^4.1.0",
+		"better-sqlite3": "^11.10.0",
+		"html2canvas-pro": "^1.5.0",
+		"tailwindcss": "^4.1.0",
+		"toml": "^3.0.0"
+	}
 }
