--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
 		"coverage": "vitest run --coverage",
 		"machine-translate": "inlang machine translate --project project.inlang",
 		"lint": "eslint . && prettier --check .",
-		"format": "prettier --write ."
+		"format": "prettier --write .",
+		"db:push": "drizzle-kit push",
+		"db:migrate": "drizzle-kit migrate",
+		"db:studio": "drizzle-kit studio"
 	},
 	"devDependencies": {
 		"@eslint/compat": "^1.2.5",
@@ -25,8 +28,10 @@
 		"@tailwindcss/forms": "^0.5.0",
 		"@tailwindcss/typography": "^0.5.0",
 		"@testing-library/svelte": "^5.2.0",
-		"@types/better-sqlite3": "^7.6.0",
+		"@types/better-sqlite3": "^7.6.12",
+		"@types/node": "^20",
 		"@vitest/coverage-v8": "^3.1.0",
+		"drizzle-kit": "^0.30.2",
 		"eslint": "^9.18.0",
 		"eslint-config-prettier": "^10.0.1",
 		"eslint-plugin-svelte": "^3.0.0",
@@ -45,7 +50,8 @@
 	"type": "module",
 	"dependencies": {
 		"@tailwindcss/vite": "^4.1.0",
-		"better-sqlite3": "^11.10.0",
+		"better-sqlite3": "^11.8.0",
+		"drizzle-orm": "^0.40.0",
 		"html2canvas-pro": "^1.5.0",
 		"tailwindcss": "^4.1.0",
 		"toml": "^3.0.0"
